--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   outline: none;
   box-sizing: border-box;
+  font-family: 'Sora', Helvetica, sans-serif;
 }
 
 body {
@@ -47,7 +48,7 @@ body {
   color: #fff;
   text-align: center;
   position: absolute; /* Posicione o h2 fora do círculo */
-  top: -100px; /* Ajuste a posição vertical */
+  top: 20px; /* Ajuste a posição vertical */
   left: 50%;
   transform: translateX(-50%);
 }
@@ -73,20 +74,35 @@ body {
 }
 
 .pomodoro button {
-  background: black;
+  font-weight: 700;
   color: #fff;
-  border: none;
-  cursor: pointer;
-  padding: 10px 35px;
-  border-radius: 8px;
-  transition: background-color 300ms ease-in-out;
-  margin: 0.5rem;
+  border: 1px solid #fff;
+  border-radius: 15px;
+  padding: 18px 34px;
+  font-size: 18px;
+  margin-left: 18px;
+	position: relative;
+	background-color: transparent;
+	transition: 0.3s ease-in-out;
 }
 
-.working .pomodoro button {
+.pomodoro button:hover{
+  color: #fff;
+  background-color: #000; 
+  border: 1px solid #fff;
+  
+}
+.pomodoro button:hover::before{
+  /* color: #fff; */
+  width: 100%;
+  
+}
+
+
+/* .working .pomodoro button {
   background-color: black;
   color: #fff;
-}
+} */
 
 .button_resting .timer {
   color: rgba(61, 0, 242, 1);
@@ -104,5 +120,33 @@ body {
   
 }
 .pomodoro .datails p{
+  /* color: #08b605; */
   margin-bottom: 10px;
+}
+
+
+
+
+
+.image img{
+  animation: updown 3s linear infinite;
+  max-width: 200px;
+  height: auto;
+  margin-left: -300px;
+  
+}
+.image{
+  
+  height: 750px;
+}
+@keyframes updown {
+  0% {
+      transform: translateY(-20px);
+  }
+  50% {
+      transform: translateY(20px);
+  }
+  100% {
+      transform: translateY(-20px);
+  }
 }
